<resources>
    <string name="app_name">Grade Tracker App</string>
    <string name="login">Log In</string>
    <string name="createAcc">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="goBack">Go Back</string>

    <string name="Courses">Courses</string>
    <string name="assignments">Assignments</string>
    <string name="grades">Grades</string>
    <string name="editCourse">Edit Course</string>
    <string name="addCourse">Add Course</string>
    <string name="professor">Professor</string>
    <string name="courseName">Course Name</string>
    <string name="assignmentName">Assignment Name</string>
    <string name="grade">Grade</string>
    <string name="title_acct">Account Login</string>
    <string name="success">Login Successful!</string>
    <string name="addAssignment">Add Assignment</string>
    <string name="editAssignment">Edit Assignment</string>
    <string name="AssignmentName">Assignment Name</string>
    <string name="Grade">Grade</string>
    <string name="footer">©2020 CST438 Team C</string>

</resources>