<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAssignment"
    android:background="@drawable/gradient_background3">

    <EditText
        android:id="@+id/editTextAssignmentName"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/AssignmentName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/courseName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAssignmentName" />

    <EditText
        android:id="@+id/editTextGrade"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/Grade"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <Button
        android:id="@+id/EditButton"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/editAssignment"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGrade"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/EditToAssignMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/goBack"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditButton"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>