<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourse"
    android:background="@drawable/gradient_background2">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/courseName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/professor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:fontFamily="@font/ubuntu_bold"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/addCourse"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.231"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/addCourseBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/goBack"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.34" />
</androidx.constraintlayout.widget.ConstraintLayout>