<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse"
    android:background="@drawable/gradient_background2">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/Courses"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="270dp"
        android:layout_height="69dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/ubuntu_bold"
        android:hint="@string/professor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/editCourse"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/editToCourseMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/goBack"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.903" />
</androidx.constraintlayout.widget.ConstraintLayout>